# KawaiiSR

./: .gitignore  CONTRIBUTING.md  readme.md  伪影判断模型设计.md  超分辨率网络设计.md
.github/workflows/: release.yml
KawaiiSR/: .gitignore  README.md  package.json
KawaiiSR-model/: .gitignore  KawaiiTrainer.py  readme.md  train.py  train_config.py
KawaiiSR-model/KawaiiSR/: KawaiiSR.py
KawaiiSR-model/configs/: anime_finetune.yaml  anime_finetune_lossy.yaml  quick_validate.yaml  real_stage1.yaml  real_stage2.yaml  real_stage3.yaml
KawaiiSR-model/loss/: VGGPerceptualLoss.py
KawaiiSR/src/: App.vue  types.ts
KawaiiSR/src-tauri/: Cargo.toml  models.toml  tauri.conf.json
KawaiiSR/src-tauri/onnx/: .gitignore
KawaiiSR/src-tauri/src/: app_state.rs  id_generator.rs  lib.rs  logger.rs  main.rs  sr_manager.rs
KawaiiSR/src-tauri/src/config/: config_loader.rs  mod.rs  model_config.rs
KawaiiSR/src-tauri/src/pipeline/: image_meta.rs  image_preprocessor.rs  image_stitcher.rs  image_tiler.rs  mod.rs  model_manager.rs  onnx_session.rs  result_collector.rs  task_meta.rs  tensor_batcher.rs  tiling_utils.rs
KawaiiSR/utils/: convert.py
models/: .gitignore  KawaiiTrainer.py  checkpoint_manager.py  data_loader.py  demo_kawaii.py  export_onnx.py  flops.py  kawaii_trainer.py  onnx_superres.py  readme.md  run_inference.py  train.py  train_config.py  trainer_base.py
models/ArtifactDetector/: ArtifactDetector.py  ArtifactDetector_resnet.py  训练的思考.md  高分辨率图像压缩伪影检测模型设计.md
models/Discriminator/: UNetDiscriminatorSN.py
models/KawaiiSR/: HAT.py  KawaiiSR.py  MambaIRv2.py  arch_util.py  demo.py  demo_hat.py  demo_kawaii.py  flops.py  readme.md  训练的整体流程.md
models/configs/: anime_finetune.yaml  quick_validate.yaml  real_stage1.yaml  real_stage2.yaml  real_stage3.yaml
models/loss/: AnimePerceptualLoss.py  ArtifactPerceptualLoss.py  CharbonnierLoss.py  HingeGANLoss.py  KawaiiLoss.py  LaplacianLoss.py  VGGPerceptualLoss.py
tools/artifact-datagen/: Cargo.toml  readme.md
tools/artifact-datagen/src/: main.rs
tools/scripts/: automatic_data_generate.py  readme.md  timm_model.py  (+1 more)
tools/sr-datagen/: Cargo.toml  readme.md
tools/sr-datagen/src/: main.rs  strong_gt.rs
(+12 files in other folders)
