[package]
name = "kawaiisr"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kawaiisr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
ort = { version = "2.0.0-rc.11", features = ["directml", "xnnpack"] }
serde_json = "1"
image = "0.25.9"
ndarray = "0.17.2"
crossbeam-channel = "0.5.15"
anyhow = "1.0.100"
dashmap = "6.1.0"

