[package]
name = "sr-datagen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = {version = "4.5.42", features = ["derive"]}
csv = "1.3.1"
image = "0.25.6"
lazy_static = "1.5.0"
parking_lot = "0.12.4"
rayon = "1.10.0"
resvg = "0.45.1"
tiny-skia = "0.11.4"
usvg = "0.45.1"
walkdir = "2.5.0"
