[package]
name = "sr-datagen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = {version = "4.5.42", features = ["derive"]}
csv = "1.3.1"
image = "0.25.6"
imageproc = "0.25.0"
lazy_static = "1.5.0"
ndarray = "0.16.1"
parking_lot = "0.12.4"
rand = "0.9.2"
rayon = "1.10.0"
resvg = "0.45.1"
tiny-skia = "0.11.4"
usvg = "0.45.1"
walkdir = "2.5.0"
webp = "0.3.0"
